--- a/MBTS4MA/pom.xml
+++ b/MBTS4MA/pom.xml
@@ -7,7 +7,7 @@
         <dependency>
 		    <groupId>fr.inria.gforge.spoon</groupId>
 		    <artifactId>spoon-core</artifactId>
-		    <version>7.4.0-beta-17</version>
+		    <version>7.5.0</version>
 		</dependency>
   </dependencies>
   <build>
